--- a/components/card/card.html
+++ b/components/card/card.html
@@ -237,7 +237,7 @@
     <h2>text overlay Card</h2>
     <div class="card-wrapper card-text-overlay-wrapper">
         <span class="card-unavailable">Currently unavailable</span>
-        <div class="card">
+        <div class="card card-opacity">
             <div class="card-image">
                 <img src="/components/card/images.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
@@ -269,7 +269,6 @@
                </div>
             </div>
         </div>
-
         <div class="card-text-only hide">
             <div class="header">
                 <h1 class="heading">Heading</h1>
@@ -279,6 +278,9 @@
             </div>
         </div>
     </div>
+
+
+    <!-- shadow -->
     
     <h2>Cards with shadows</h2>
     <div class="shadow-card-wrapper">
