--- a/components/card/card.html
+++ b/components/card/card.html
@@ -14,7 +14,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="horizontal-card hide-hz">
             <div class="card-horizontal-image">
-                <img src="/cricket-bat1.jpg" alt="img">
+                <img src="/images/cricket-bat1.jpg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
@@ -60,7 +60,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="horizontal-card">
             <div class="card-horizontal-image">
-                <img src="/components/card/cricket-bat1.jpg" alt="img">
+                <img src="/images/cricket-bat1.jpg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
@@ -106,7 +106,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="card">
             <div class="card-image">
-                <img src="/components/card/images.jpeg" alt="img">
+                <img src="/images/shoes.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
@@ -151,7 +151,7 @@
     <div class="card-wrapper">
         <div class="card">
             <div class="card-image">
-                <img src="/components/card/images.jpeg" alt="img">
+                <img src="/images/shoes.jpeg" alt="img">
                 <span class="badge-new">New</span>
             </div>
             <div class="card-details">
@@ -192,7 +192,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="card">
             <div class="card-image">
-                <img src="/components/card/cricket-bat1.jpg" alt="img">
+                <img src="/images/shoes.jpeg" alt="img">
                 <span class="badge-new">New</span>
                 <span class="delete-icon">&times;</span>
             </div>
@@ -239,7 +239,7 @@
         <span class="card-unavailable">Currently unavailable</span>
         <div class="card card-opacity">
             <div class="card-image">
-                <img src="/components/card/images.jpeg" alt="img">
+                <img src="/images/shoes.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
@@ -288,7 +288,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="card">
             <div class="card-image">
-                <img src="/components/card/images.jpeg" alt="img">
+                <img src="/images/shoes.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
@@ -333,7 +333,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
             <div class="card">
                 <div class="card-image">
-                    <img src="/components/card/images.jpeg" alt="img">
+                    <img src="/images/shoes.jpeg" alt="img">
                     <span class="badge-new hide">New</span>
                     <span class="delete-icon hide">&times;</span>
                 </div>
@@ -378,7 +378,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
             <div class="card">
                 <div class="card-image">
-                    <img src="/components/card/images.jpeg" alt="img">
+                    <img src="/images/shoes.jpeg" alt="img">
                     <span class="badge-new hide">New</span>
                     <span class="delete-icon hide">&times;</span>
                 </div>
