--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <h3>simple</h3>
-    <img class="avatar" src="/components/avatar/large-img.jpeg" alt="">
+    <img class="avatar" src="/images/large-img.jpeg" alt="">
 
     <h3>different sizes</h3>
     <div class="avatar-sizes">
-        <div><img class="avatar avatar-large" src="/components/avatar/large-img.jpeg" alt=""></div>
-        <div><img class="avatar avatar-meduim" src="/components/avatar/medium.jpeg" alt=""></div>
-        <div><img class="avatar avatar-small" src="/components/avatar/small.jpeg" alt=""></div>
+        <div><img class="avatar avatar-large" src="/images/large-img.jpeg" alt=""></div>
+        <div><img class="avatar avatar-meduim" src="/images/medium.jpeg" alt=""></div>
+        <div><img class="avatar avatar-small" src="/images/small.jpeg" alt=""></div>
     </div>
 </body>
 </html>
