--- a/components/card/card.html
+++ b/components/card/card.html
@@ -20,7 +20,7 @@
             </div>
             <div class="card-details">
                 <div class="card-item">
-                    <h1 class="card-product-name">SEGA</h1>
+                    <h1 class="card-product-name">iPhone 13 Pro</h1>
                     <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                 </div>
                 <div class="card-brief-detail">
@@ -28,8 +28,8 @@
                 </div>
                 <div class="card-price">
                    Rs.
-                   <span class="price">899</span>
-                   <span class="price text-strike-over">Rs.999</span>
+                   <span class="price">1,19,900</span>
+                   <span class="price text-strike-over">1,19,900</span>
                    <span class="price text-discount">10%</span>
                 </div>
                 <div class="card-btn">
@@ -60,23 +60,23 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="horizontal-card">
             <div class="card-horizontal-image">
-                <img src="/images/cricket-bat1.jpg" alt="img">
+                <img src="/images/samsungs215g.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
             <div class="card-details">
                 <div class="card-item">
-                    <h1 class="card-product-name">SEGA</h1>
+                    <h1 class="card-product-name">Samsung Galaxy S21 5G</h1>
                     <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                </div>
                <div class="card-brief-detail">
-                   <p>Cricket Shoes for Mens - Lightweight, maximized Grip & Quick Actions</p>
+                   <p>(Phantom Violet, 8GB, 128GB Storage) with No Cost EMI/Additional Exchange Offers</p>
                </div>
                <div class="card-price">
                    Rs.
-                   <span class="price">899</span>
-                   <span class="price text-strike-over">Rs.999</span>
-                   <span class="price text-discount">10%</span>
+                   <span class="price">59,990</span>
+                   <span class="price text-strike-over">Rs.83,999</span>
+                   <span class="price text-discount">29%</span>
                </div>
                <div class="card-btn">
                 <button class="btn btn-primary">
@@ -106,22 +106,22 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="card">
             <div class="card-image">
-                <img src="/images/shoes.jpeg" alt="img">
+                <img src="/images/iphone13pro.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
             <div class="card-details">
                 <div class="card-item">
-                    <h1 class="card-product-name">SEGA</h1>
+                    <h1 class="card-product-name">iPhone 13 Pro</h1>
                     <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                </div>
                <div class="card-brief-detail">
-                   <p>Men's Cricket Shoe</p>
+                   <p>Sierra Blue</p>
                </div>
                <div class="card-price">
                    Rs.
-                   <span class="price">899</span>
-                   <span class="price text-strike-over">Rs.999</span>
+                   <span class="price">1,19,900</span>
+                   <span class="price text-strike-over">Rs.1,20,900</span>
                    <span class="price text-discount">10%</span>
                </div>
                <div class="card-btn">
@@ -151,21 +151,21 @@
     <div class="card-wrapper">
         <div class="card">
             <div class="card-image">
-                <img src="/images/shoes.jpeg" alt="img">
+                <img src="/images/iphone13pro.jpeg" alt="img">
                 <span class="badge-new">New</span>
             </div>
             <div class="card-details">
                 <div class="card-item">
-                    <h1 class="card-product-name">SEGA</h1>
+                    <h1 class="card-product-name">iPhone 13 Pro</h1>
                     <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                </div>
                <div class="card-brief-detail">
-                   <p>Men's Cricket Shoe</p>
+                   <p>Sierra Blue</p>
                </div>
                <div class="card-price">
                    Rs.
-                   <span class="price">899</span>
-                   <span class="price text-strike-over">Rs.999</span>
+                   <span class="price">1,19,900</span>
+                   <span class="price text-strike-over">Rs.1,20,900</span>
                    <span class="price text-discount">10%</span>
                </div>
                <div class="card-btn">
@@ -192,22 +192,22 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="card">
             <div class="card-image">
-                <img src="/images/shoes.jpeg" alt="img">
+                <img src="/images/iphone13pro.jpeg" alt="img">
                 <span class="badge-new">New</span>
                 <span class="delete-icon">&times;</span>
             </div>
             <div class="card-details">
                 <div class="card-item">
-                    <h1 class="card-product-name">ISBN Scoop</h1>
+                    <h1 class="card-product-name">iPhone 13 Pro</h1>
                     <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                </div>
                <div class="card-brief-detail">
-                   <p>Poplar Willow bat</p>
+                   <p>Sierra Blue</p>
                </div>
                <div class="card-price">
                    Rs.
-                   <span class="price">420</span>
-                   <span class="price text-strike-over">Rs.500</span>
+                   <span class="price">1,19,900</span>
+                   <span class="price text-strike-over">1,20,900</span>
                    <span class="price text-discount">10%</span>
                </div>
                <div class="card-btn">
@@ -239,22 +239,22 @@
         <span class="card-unavailable">Currently unavailable</span>
         <div class="card card-opacity">
             <div class="card-image">
-                <img src="/images/shoes.jpeg" alt="img">
+                <img src="/images/iphone13pro.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
             <div class="card-details">
                 <div class="card-item">
-                    <h1 class="card-product-name">SEGA</h1>
+                    <h1 class="card-product-name">iPhone 13 Pro</h1>
                     <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                </div>
                <div class="card-brief-detail">
-                   <p>Men's Cricket Shoe</p>
+                   <p>Sierra Blue</p>
                </div>
                <div class="card-price">
                    Rs.
-                   <span class="price">899</span>
-                   <span class="price text-strike-over">Rs.999</span>
+                   <span class="price">1,19,900</span>
+                   <span class="price text-strike-over">1,20,900</span>
                    <span class="price text-discount">10%</span>
                </div>
                <div class="card-btn">
@@ -288,22 +288,22 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="card">
             <div class="card-image">
-                <img src="/images/shoes.jpeg" alt="img">
+                <img src="/images/iphone13pro.jpeg" alt="img">
                 <span class="badge-new hide">New</span>
                 <span class="delete-icon hide">&times;</span>
             </div>
             <div class="card-details">
                 <div class="card-item">
-                    <h1 class="card-product-name">SEGA</h1>
+                    <h1 class="card-product-name">iPhone 13 Pro</h1>
                     <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                </div>
                <div class="card-brief-detail">
-                   <p>Men's Cricket Shoe</p>
+                   <p>Sierra Blue</p>
                </div>
                <div class="card-price">
                    Rs.
-                   <span class="price">899</span>
-                   <span class="price text-strike-over">Rs.999</span>
+                   <span class="price">1,19,900</span>
+                   <span class="price text-strike-over">1,20,900</span>
                    <span class="price text-discount">10%</span>
                </div>
                <div class="card-btn">
@@ -333,22 +333,22 @@
         <span class="card-unavailable hide">Currently unavailable</span>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/shoes.jpeg" alt="img">
+                    <img src="/images/iphone13pro.jpeg" alt="img">
                     <span class="badge-new hide">New</span>
                     <span class="delete-icon hide">&times;</span>
                 </div>
                 <div class="card-details">
                     <div class="card-item">
-                        <h1 class="card-product-name">SEGA</h1>
+                        <h1 class="card-product-name">iPhone 13 Pro</h1>
                         <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                    </div>
                    <div class="card-brief-detail">
-                       <p>Men's Cricket Shoe</p>
+                       <p>Sierra Blue</p>
                    </div>
                    <div class="card-price">
                        Rs.
-                       <span class="price">899</span>
-                       <span class="price text-strike-over">Rs.999</span>
+                       <span class="price">1,19,900</span>
+                       <span class="price text-strike-over">1,20,900</span>
                        <span class="price text-discount">10%</span>
                    </div>
                    <div class="card-btn">
@@ -378,22 +378,22 @@
         <span class="card-unavailable hide">Currently unavailable</span>
             <div class="card">
                 <div class="card-image">
-                    <img src="/images/shoes.jpeg" alt="img">
+                    <img src="/images/iphone13pro.jpeg" alt="img">
                     <span class="badge-new hide">New</span>
                     <span class="delete-icon hide">&times;</span>
                 </div>
                 <div class="card-details">
                     <div class="card-item">
-                        <h1 class="card-product-name">SEGA</h1>
+                        <h1 class="card-product-name">iPhone 13 Pro</h1>
                         <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
                    </div>
                    <div class="card-brief-detail">
-                       <p>Men's Cricket Shoe</p>
+                       <p>Sierra Blue</p>
                    </div>
                    <div class="card-price">
                        Rs.
-                       <span class="price">899</span>
-                       <span class="price text-strike-over">Rs.999</span>
+                       <span class="price">1,19,900</span>
+                       <span class="price text-strike-over">1,20,900</span>
                        <span class="price text-discount">10%</span>
                    </div>
                    <div class="card-btn">
