correct errors and add 2 more avatar in profile avatar.

--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -8,68 +8,18 @@
     <title>Avatar</title>
 </head>
 <body>
+      
+    <h2>Profile avatar</h2>
+    <img class="avatar" src="/images/large-img.jpeg">
+    <img class="avatar" src="/images/profile-image1.svg">
+    <img class="avatar img-cover" src="/images/profile-image2.jpeg">
 
-    <div class="component-wrapper">
-        <div class="comp-heading  margin-bottom">
-            Avatar
-        </div>
-        <div class="heading-discription margin-bottom line-height">
-            Avatars are user profile pictures, usually found in circular shapes. It can be used to show user's profile picture on profile information page, on navigation bar, in blogs grid items.
-        </div>
-
-        <div class="separator"></div>
-
-        <div class="variant-heading margin-bottom">
-            Profile Avatar
-        </div>
-
-        <div class="varient-discription line-height margin-bottom">
-            You can use Profile Avatars by add 'avatar' class inside the img tag. You can add 'img-cover' class for cover image.
-        </div>
-
-        <div class="component-container margin-bottom">
-            <img class="avatar" src="/images/large-img.jpeg">
-            <img class="avatar" src="/images/profile-image1.svg">
-            <img class="avatar img-cover" src="/images/profile-image2.jpeg">
-        </div>
-
-        <div class="code-container margin-bottom">
-            <iframe
-                class="iframe-length"
-                src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=auto&width=744&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cimg%2520class%253D%2522avatar%2522%2520src%253D%2522%2520%2522%2520alt%253D%2522%2520%2522%253E%250A%253Cimg%2520class%253D%2522avatar%2522%2520src%253D%2522%2520%2522%2520alt%253D%2522%2520%2522%253E%250A%253Cimg%2520class%253D%2522avatar%2522%2520src%253D%2522%2520%2522%2520alt%253D%2522%2520%2522%253E"
-                style="height: 243px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
-        </div>
-
-        <div class="separator"></div>
-
-
-        <div class="variant-heading margin-bottom">
-            Avatar in different sizes
-        </div>
-
-        <div class="varient-discription line-height margin-bottom">
-            Size of the avatars can be changed by adding avatar-large | avatar-meduim | avatar-small class to the existing avatar class.
-        </div>
-
-        <div class="component-container margin-bottom">
-            <div class="avatar-sizes">
-                <div><img class="avatar avatar-large" src="/images/large-img.jpeg" alt=""></div>
-                <div><img class="avatar avatar-meduim" src="/images/medium.jpeg" alt=""></div>
-                <div><img class="avatar avatar-small" src="/images/small.jpeg" alt=""></div>
-            </div>
-        </div>
-
-        <div class="code-container margin-bottom">
-            <iframe
-                class="iframe-length"
-                src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=none&l=auto&width=744&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cimg%2520class%253D%2522avatar%2520avatar-large%2522%2520src%253D%2522%2520%2522%2520alt%253D%2522%2520%2522%253E%250A%253Cimg%2520class%253D%2522avatar%2520avatar-meduim%2522%2520src%253D%2522%2520%2522%2520alt%253D%2522%2522%253E%250A%253Cimg%2520class%253D%2522avatar%2520avatar-small%2522%2520src%253D%2522%2520%2522%2520alt%253D%2522%2522%253E"
-                style="height: 243px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
-        </div>
-        
+    <h2>avatar in sizes</h2>
+    <div class="avatar-sizes">
+        <div><img class="avatar avatar-large" src="/images/large-img.jpeg" alt=""></div>
+        <div><img class="avatar avatar-meduim" src="/images/medium.jpeg" alt=""></div>
+        <div><img class="avatar avatar-small" src="/images/small.jpeg" alt=""></div>
     </div>
+
 </body>
 </html>
