STYLE : Change border color

--- a/components/button/button.css
+++ b/components/button/button.css
@@ -75,7 +75,7 @@ body {
 
 .btn-secondary-outline {
     box-shadow: none;
-    border: 2px solid var(--secondary-color);
+    border: 2px solid var(--secondary-hover);
     background-color: transparent;
 }
 
