--- a/components/image component/image.html
+++ b/components/image component/image.html
@@ -10,18 +10,18 @@
 <body>
     <h1>Responsive Image</h1>
     <div class="img-wrapper">
-        <img src="https://picsum.photos/250/250" alt="Responsive Image">
+        <img class="img-responsive" src="https://picsum.photos/250/250" alt="Responsive Image">
     </div>
 
 
     <h1>Rounded corner Image</h1>
     <div class="img-wrapper">
-        <img src="https://picsum.photos/250/250" class="rounded-corner-img" alt="Responsive image">
+        <img src="https://picsum.photos/250/250" class="rounded-corner-img img-responsive " alt="Responsive image">
     </div>
 
     <h1>Round Image</h1>
     <div class="img-wrapper">
-        <img src="https://picsum.photos/200/200" class="round-img" alt="Responsive image">
+        <img src="https://picsum.photos/200/200" class="round-img img-responsive" alt="Responsive image">
     </div>
 </body>
 </html>
