--- a/components/card/card.html
+++ b/components/card/card.html
@@ -94,7 +94,7 @@
               <span class="icon"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
-            <button class="btn btn-primary-outline">
+            <button class="btn btn-wishlist">
               <span class="icon"><i class="fas fa-shopping-cart"></i></span>
               Add to Wishlist
             </button>
