--- a/components/list/list.html
+++ b/components/list/list.html
@@ -11,7 +11,7 @@
     <h2>Unordered list</h2>
     <br>
 
-    <div class="wrapper">
+    <div class="list-items-wrapper">
         <ul class="style-list"> 
             <li>list item1</li>
             <li>list item2</li>
@@ -34,7 +34,7 @@
     <h2>Ordered list</h2>
     <br>
 
-    <div class="wrapper">
+    <div class="list-items-wrapper">
         <ol class="style-list">
             <li>List item with numbers</li>
             <li>List item with numbers</li>
