--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -9,7 +9,7 @@
     <title>Alert</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper-alert"> 
         <div class="alert alert-error">
             <span class="icon"><i class="fas fa-exclamation-circle"></i></span>
             <span>This is an error alert — check it out!</span>
